@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class CreateJobController {
    + CreateJobController(jobRepository)
    + validateJobData(jobName, jobDescription)
    + addJobToRepo(newJob)

}


class CreateJobUI {
    +run()
    +requestData(jobName, jobDescription)
}



class Employee{
    -name:String
    -birthdate:Date
    -admissionDate:Date
    -address
    -mobileContact:String
    -emailContact:String
    -IDdocType:String
    -IDnumber:String
    -taxNumber:String
    -skils:List<Job>

    +Employee (String nome,LocalDate dateOfBirth,\nLocalDate admissionDate, String morada, int telemovel,\nString email, String idDocType, int docTypeNumber,\nint taxPayerIdNumber, String role, Job job)
}

class Repositories{
    - instance:Repositories
    - skillRepository:JobRepository
    - jobRepository:JobRepository
    - employeeRepository:EmployeeRepository


    + getInstance()
    + getSkillRepository()
    + getJobRepository()
    + getEmployeeRepository()
}

class JobRepository{
    + createJob(jobName, jobDescription)
    + validateJob(newJob)
    + addJob(newJob)
}

class Job {
    -jobName:String
    -jobDescription:String

    +Job(jobName, jobDescription)
    +validateJobData(jobName, jobDescription)
}

CreateJobUI ..> CreateJobController

CreateJobController -->  Repositories : getInstance
Repositories ..> JobRepository : create
JobRepository ..> Job : createJob
Employee --> Job : has a

@enduml
